ulNoActionsParser.java
// $ANTLR 3.0.1 ulNoActions.g 2018-01-07 14:01:39

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class ulNoActionsParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "TYPE", "INTEGERCONST", "ID", "WHILE", "IF", "ELSE", "STRINGCONST", "FLOATCONST", "CHARCONST", "TRUE", "FALSE", "WS", "COMMENT", "'('", "')'", "','", "'['", "']'", "'{'", "'}'", "';'", "'print'", "'println'", "'='", "'return'", "'*'", "'+'", "'-'", "'<'", "'=='"
    };
    public static final int INTEGERCONST=5;
    public static final int FLOATCONST=11;
    public static final int TRUE=13;
    public static final int COMMENT=16;
    public static final int STRINGCONST=10;
    public static final int CHARCONST=12;
    public static final int ELSE=9;
    public static final int WHILE=7;
    public static final int FALSE=14;
    public static final int ID=6;
    public static final int WS=15;
    public static final int EOF=-1;
    public static final int TYPE=4;
    public static final int IF=8;

        public ulNoActionsParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[60+1];
         }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "ulNoActions.g"; }


    protected void mismatch (IntStream input, int ttype, BitSet follow)
            throws RecognitionException
    {
            throw new MismatchedTokenException(ttype, input);
    }
    public void recoverFromMismatchedSet (IntStream input,
                                          RecognitionException e,
                                          BitSet follow)
            throws RecognitionException
    {
            reportError(e);
            throw e;
    }




    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start program
    // ulNoActions.g:35:1: program : ( function )+ ;
    public final program_return program() throws RecognitionException {
        program_return retval = new program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        function_return function1 = null;



        try {
            // ulNoActions.g:35:9: ( ( function )+ )
            // ulNoActions.g:35:11: ( function )+
            {
            root_0 = (Object)adaptor.nil();

            // ulNoActions.g:35:11: ( function )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==TYPE) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // ulNoActions.g:0:0: function
            	    {
            	    pushFollow(FOLLOW_function_in_program47);
            	    function1=function();
            	    _fsp--;
            	    if (failed) return retval;
            	    if ( backtracking==0 ) adaptor.addChild(root_0, function1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (backtracking>0) {failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return retval;
    }
    // $ANTLR end program

    public static class function_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start function
    // ulNoActions.g:38:1: function : functionDecl functionBody ;
    public final function_return function() throws RecognitionException {
        function_return retval = new function_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        functionDecl_return functionDecl2 = null;

        functionBody_return functionBody3 = null;



        try {
            // ulNoActions.g:38:10: ( functionDecl functionBody )
            // ulNoActions.g:38:12: functionDecl functionBody
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_functionDecl_in_function65);
            functionDecl2=functionDecl();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, functionDecl2.getTree());
            pushFollow(FOLLOW_functionBody_in_function67);
            functionBody3=functionBody();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, functionBody3.getTree());

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return retval;
    }
    // $ANTLR end function

    public static class functionDecl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start functionDecl
    // ulNoActions.g:41:1: functionDecl : type identifier '(' formalParameters ')' ;
    public final functionDecl_return functionDecl() throws RecognitionException {
        functionDecl_return retval = new functionDecl_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal6=null;
        Token char_literal8=null;
        type_return type4 = null;

        identifier_return identifier5 = null;

        formalParameters_return formalParameters7 = null;


        Object char_literal6_tree=null;
        Object char_literal8_tree=null;

        try {
            // ulNoActions.g:41:14: ( type identifier '(' formalParameters ')' )
            // ulNoActions.g:41:16: type identifier '(' formalParameters ')'
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_type_in_functionDecl85);
            type4=type();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, type4.getTree());
            pushFollow(FOLLOW_identifier_in_functionDecl87);
            identifier5=identifier();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, identifier5.getTree());
            char_literal6=(Token)input.LT(1);
            match(input,17,FOLLOW_17_in_functionDecl89); if (failed) return retval;
            if ( backtracking==0 ) {
            char_literal6_tree = (Object)adaptor.create(char_literal6);
            adaptor.addChild(root_0, char_literal6_tree);
            }
            pushFollow(FOLLOW_formalParameters_in_functionDecl91);
            formalParameters7=formalParameters();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, formalParameters7.getTree());
            char_literal8=(Token)input.LT(1);
            match(input,18,FOLLOW_18_in_functionDecl93); if (failed) return retval;
            if ( backtracking==0 ) {
            char_literal8_tree = (Object)adaptor.create(char_literal8);
            adaptor.addChild(root_0, char_literal8_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return retval;
    }
    // $ANTLR end functionDecl

    public static class formalParameters_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start formalParameters
    // ulNoActions.g:44:1: formalParameters : ( compoundType identifier ( formals )* | );
    public final formalParameters_return formalParameters() throws RecognitionException {
        formalParameters_return retval = new formalParameters_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        compoundType_return compoundType9 = null;

        identifier_return identifier10 = null;

        formals_return formals11 = null;



        try {
            // ulNoActions.g:44:18: ( compoundType identifier ( formals )* | )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==TYPE) ) {
                alt3=1;
            }
            else if ( (LA3_0==18) ) {
                alt3=2;
            }
            else {
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("44:1: formalParameters : ( compoundType identifier ( formals )* | );", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // ulNoActions.g:44:20: compoundType identifier ( formals )*
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_compoundType_in_formalParameters115);
                    compoundType9=compoundType();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, compoundType9.getTree());
                    pushFollow(FOLLOW_identifier_in_formalParameters117);
                    identifier10=identifier();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, identifier10.getTree());
                    // ulNoActions.g:44:44: ( formals )*
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==19) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // ulNoActions.g:0:0: formals
                    	    {
                    	    pushFollow(FOLLOW_formals_in_formalParameters119);
                    	    formals11=formals();
                    	    _fsp--;
                    	    if (failed) return retval;
                    	    if ( backtracking==0 ) adaptor.addChild(root_0, formals11.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    }
                    break;
                case 2 :
                    // ulNoActions.g:46:18: 
                    {
                    root_0 = (Object)adaptor.nil();

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return retval;
    }
    // $ANTLR end formalParameters

    public static class formals_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start formals
    // ulNoActions.g:48:1: formals : ',' compoundType identifier ;
    public final formals_return formals() throws RecognitionException {
        formals_return retval = new formals_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal12=null;
        compoundType_return compoundType13 = null;

        identifier_return identifier14 = null;


        Object char_literal12_tree=null;

        try {
            // ulNoActions.g:48:9: ( ',' compoundType identifier )
            // ulNoActions.g:48:11: ',' compoundType identifier
            {
            root_0 = (Object)adaptor.nil();

            char_literal12=(Token)input.LT(1);
            match(input,19,FOLLOW_19_in_formals165); if (failed) return retval;
            if ( backtracking==0 ) {
            char_literal12_tree = (Object)adaptor.create(char_literal12);
            adaptor.addChild(root_0, char_literal12_tree);
            }
            pushFollow(FOLLOW_compoundType_in_formals167);
            compoundType13=compoundType();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, compoundType13.getTree());
            pushFollow(FOLLOW_identifier_in_formals169);
            identifier14=identifier();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, identifier14.getTree());

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return retval;
    }
    // $ANTLR end formals

    public static class compoundType_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start compoundType
    // ulNoActions.g:52:1: compoundType : ( TYPE | TYPE '[' INTEGERCONST ']' );
    public final compoundType_return compoundType() throws RecognitionException {
        compoundType_return retval = new compoundType_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token TYPE15=null;
        Token TYPE16=null;
        Token char_literal17=null;
        Token INTEGERCONST18=null;
        Token char_literal19=null;

        Object TYPE15_tree=null;
        Object TYPE16_tree=null;
        Object char_literal17_tree=null;
        Object INTEGERCONST18_tree=null;
        Object char_literal19_tree=null;

        try {
            // ulNoActions.g:52:14: ( TYPE | TYPE '[' INTEGERCONST ']' )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==TYPE) ) {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==20) ) {
                    alt4=2;
                }
                else if ( (LA4_1==ID) ) {
                    alt4=1;
                }
                else {
                    if (backtracking>0) {failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("52:1: compoundType : ( TYPE | TYPE '[' INTEGERCONST ']' );", 4, 1, input);

                    throw nvae;
                }
            }
            else {
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("52:1: compoundType : ( TYPE | TYPE '[' INTEGERCONST ']' );", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // ulNoActions.g:52:16: TYPE
                    {
                    root_0 = (Object)adaptor.nil();

                    TYPE15=(Token)input.LT(1);
                    match(input,TYPE,FOLLOW_TYPE_in_compoundType187); if (failed) return retval;
                    if ( backtracking==0 ) {
                    TYPE15_tree = (Object)adaptor.create(TYPE15);
                    adaptor.addChild(root_0, TYPE15_tree);
                    }

                    }
                    break;
                case 2 :
                    // ulNoActions.g:53:16: TYPE '[' INTEGERCONST ']'
                    {
                    root_0 = (Object)adaptor.nil();

                    TYPE16=(Token)input.LT(1);
                    match(input,TYPE,FOLLOW_TYPE_in_compoundType204); if (failed) return retval;
                    if ( backtracking==0 ) {
                    TYPE16_tree = (Object)adaptor.create(TYPE16);
                    adaptor.addChild(root_0, TYPE16_tree);
                    }
                    char_literal17=(Token)input.LT(1);
                    match(input,20,FOLLOW_20_in_compoundType206); if (failed) return retval;
                    if ( backtracking==0 ) {
                    char_literal17_tree = (Object)adaptor.create(char_literal17);
                    adaptor.addChild(root_0, char_literal17_tree);
                    }
                    INTEGERCONST18=(Token)input.LT(1);
                    match(input,INTEGERCONST,FOLLOW_INTEGERCONST_in_compoundType208); if (failed) return retval;
                    if ( backtracking==0 ) {
                    INTEGERCONST18_tree = (Object)adaptor.create(INTEGERCONST18);
                    adaptor.addChild(root_0, INTEGERCONST18_tree);
                    }
                    char_literal19=(Token)input.LT(1);
                    match(input,21,FOLLOW_21_in_compoundType210); if (failed) return retval;
                    if ( backtracking==0 ) {
                    char_literal19_tree = (Object)adaptor.create(char_literal19);
                    adaptor.addChild(root_0, char_literal19_tree);
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return retval;
    }
    // $ANTLR end compoundType

    public static class functionBody_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start functionBody
    // ulNoActions.g:56:1: functionBody : '{' ( varDec )* ( statement )* '}' ;
    public final functionBody_return functionBody() throws RecognitionException {
        functionBody_return retval = new functionBody_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal20=null;
        Token char_literal23=null;
        varDec_return varDec21 = null;

        statement_return statement22 = null;


        Object char_literal20_tree=null;
        Object char_literal23_tree=null;

        try {
            // ulNoActions.g:56:14: ( '{' ( varDec )* ( statement )* '}' )
            // ulNoActions.g:56:16: '{' ( varDec )* ( statement )* '}'
            {
            root_0 = (Object)adaptor.nil();

            char_literal20=(Token)input.LT(1);
            match(input,22,FOLLOW_22_in_functionBody232); if (failed) return retval;
            if ( backtracking==0 ) {
            char_literal20_tree = (Object)adaptor.create(char_literal20);
            adaptor.addChild(root_0, char_literal20_tree);
            }
            // ulNoActions.g:56:20: ( varDec )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==TYPE) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // ulNoActions.g:0:0: varDec
            	    {
            	    pushFollow(FOLLOW_varDec_in_functionBody234);
            	    varDec21=varDec();
            	    _fsp--;
            	    if (failed) return retval;
            	    if ( backtracking==0 ) adaptor.addChild(root_0, varDec21.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            // ulNoActions.g:56:28: ( statement )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0>=INTEGERCONST && LA6_0<=IF)||(LA6_0>=STRINGCONST && LA6_0<=FALSE)||LA6_0==17||(LA6_0>=24 && LA6_0<=26)||(LA6_0>=28 && LA6_0<=33)) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // ulNoActions.g:0:0: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_functionBody237);
            	    statement22=statement();
            	    _fsp--;
            	    if (failed) return retval;
            	    if ( backtracking==0 ) adaptor.addChild(root_0, statement22.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            char_literal23=(Token)input.LT(1);
            match(input,23,FOLLOW_23_in_functionBody240); if (failed) return retval;
            if ( backtracking==0 ) {
            char_literal23_tree = (Object)adaptor.create(char_literal23);
            adaptor.addChild(root_0, char_literal23_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return retval;
    }
    // $ANTLR end functionBody

    public static class varDec_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start varDec
    // ulNoActions.g:59:1: varDec : compoundType ID ';' ;
    public final varDec_return varDec() throws RecognitionException {
        varDec_return retval = new varDec_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID25=null;
        Token char_literal26=null;
        compoundType_return compoundType24 = null;


        Object ID25_tree=null;
        Object char_literal26_tree=null;

        try {
            // ulNoActions.g:59:8: ( compoundType ID ';' )
            // ulNoActions.g:59:10: compoundType ID ';'
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_compoundType_in_varDec262);
            compoundType24=compoundType();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, compoundType24.getTree());
            ID25=(Token)input.LT(1);
            match(input,ID,FOLLOW_ID_in_varDec264); if (failed) return retval;
            if ( backtracking==0 ) {
            ID25_tree = (Object)adaptor.create(ID25);
            adaptor.addChild(root_0, ID25_tree);
            }
            char_literal26=(Token)input.LT(1);
            match(input,24,FOLLOW_24_in_varDec266); if (failed) return retval;
            if ( backtracking==0 ) {
            char_literal26_tree = (Object)adaptor.create(char_literal26);
            adaptor.addChild(root_0, char_literal26_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return retval;
    }
    // $ANTLR end varDec

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start statement
    // ulNoActions.g:62:1: statement : ( ';' | expr ';' | 'print' expr ';' | 'println' expr ';' | ID '=' expr ';' | ID '[' expr ']' '=' expr ';' | 'return' ';' | 'return' expr ';' | WHILE '(' expr ')' block | IF '(' expr ')' block ELSE block | IF '(' expr ')' block );
    public final statement_return statement() throws RecognitionException {
        statement_return retval = new statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal27=null;
        Token char_literal29=null;
        Token string_literal30=null;
        Token char_literal32=null;
        Token string_literal33=null;
        Token char_literal35=null;
        Token ID36=null;
        Token char_literal37=null;
        Token char_literal39=null;
        Token ID40=null;
        Token char_literal41=null;
        Token char_literal43=null;
        Token char_literal44=null;
        Token char_literal46=null;
        Token string_literal47=null;
        Token char_literal48=null;
        Token string_literal49=null;
        Token char_literal51=null;
        Token WHILE52=null;
        Token char_literal53=null;
        Token char_literal55=null;
        Token IF57=null;
        Token char_literal58=null;
        Token char_literal60=null;
        Token ELSE62=null;
        Token IF64=null;
        Token char_literal65=null;
        Token char_literal67=null;
        expr_return expr28 = null;

        expr_return expr31 = null;

        expr_return expr34 = null;

        expr_return expr38 = null;

        expr_return expr42 = null;

        expr_return expr45 = null;

        expr_return expr50 = null;

        expr_return expr54 = null;

        block_return block56 = null;

        expr_return expr59 = null;

        block_return block61 = null;

        block_return block63 = null;

        expr_return expr66 = null;

        block_return block68 = null;


        Object char_literal27_tree=null;
        Object char_literal29_tree=null;
        Object string_literal30_tree=null;
        Object char_literal32_tree=null;
        Object string_literal33_tree=null;
        Object char_literal35_tree=null;
        Object ID36_tree=null;
        Object char_literal37_tree=null;
        Object char_literal39_tree=null;
        Object ID40_tree=null;
        Object char_literal41_tree=null;
        Object char_literal43_tree=null;
        Object char_literal44_tree=null;
        Object char_literal46_tree=null;
        Object string_literal47_tree=null;
        Object char_literal48_tree=null;
        Object string_literal49_tree=null;
        Object char_literal51_tree=null;
        Object WHILE52_tree=null;
        Object char_literal53_tree=null;
        Object char_literal55_tree=null;
        Object IF57_tree=null;
        Object char_literal58_tree=null;
        Object char_literal60_tree=null;
        Object ELSE62_tree=null;
        Object IF64_tree=null;
        Object char_literal65_tree=null;
        Object char_literal67_tree=null;

        try {
            // ulNoActions.g:62:11: ( ';' | expr ';' | 'print' expr ';' | 'println' expr ';' | ID '=' expr ';' | ID '[' expr ']' '=' expr ';' | 'return' ';' | 'return' expr ';' | WHILE '(' expr ')' block | IF '(' expr ')' block ELSE block | IF '(' expr ')' block )
            int alt7=11;
            switch ( input.LA(1) ) {
            case 24:
                {
                int LA7_1 = input.LA(2);

                if ( (synpred7()) ) {
                    alt7=1;
                }
                else if ( (synpred8()) ) {
                    alt7=2;
                }
                else {
                    if (backtracking>0) {failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("62:1: statement : ( ';' | expr ';' | 'print' expr ';' | 'println' expr ';' | ID '=' expr ';' | ID '[' expr ']' '=' expr ';' | 'return' ';' | 'return' expr ';' | WHILE '(' expr ')' block | IF '(' expr ')' block ELSE block | IF '(' expr ')' block );", 7, 1, input);

                    throw nvae;
                }
                }
                break;
            case INTEGERCONST:
            case STRINGCONST:
            case FLOATCONST:
            case CHARCONST:
            case TRUE:
            case FALSE:
            case 17:
            case 29:
            case 30:
            case 31:
            case 32:
            case 33:
                {
                alt7=2;
                }
                break;
            case ID:
                {
                int LA7_7 = input.LA(2);

                if ( (synpred8()) ) {
                    alt7=2;
                }
                else if ( (synpred11()) ) {
                    alt7=5;
                }
                else if ( (synpred12()) ) {
                    alt7=6;
                }
                else {
                    if (backtracking>0) {failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("62:1: statement : ( ';' | expr ';' | 'print' expr ';' | 'println' expr ';' | ID '=' expr ';' | ID '[' expr ']' '=' expr ';' | 'return' ';' | 'return' expr ';' | WHILE '(' expr ')' block | IF '(' expr ')' block ELSE block | IF '(' expr ')' block );", 7, 7, input);

                    throw nvae;
                }
                }
                break;
            case 25:
                {
                alt7=3;
                }
                break;
            case 26:
                {
                alt7=4;
                }
                break;
            case 28:
                {
                int LA7_12 = input.LA(2);

                if ( (synpred13()) ) {
                    alt7=7;
                }
                else if ( (synpred14()) ) {
                    alt7=8;
                }
                else {
                    if (backtracking>0) {failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("62:1: statement : ( ';' | expr ';' | 'print' expr ';' | 'println' expr ';' | ID '=' expr ';' | ID '[' expr ']' '=' expr ';' | 'return' ';' | 'return' expr ';' | WHILE '(' expr ')' block | IF '(' expr ')' block ELSE block | IF '(' expr ')' block );", 7, 12, input);

                    throw nvae;
                }
                }
                break;
            case WHILE:
                {
                alt7=9;
                }
                break;
            case IF:
                {
                int LA7_14 = input.LA(2);

                if ( (synpred16()) ) {
                    alt7=10;
                }
                else if ( (true) ) {
                    alt7=11;
                }
                else {
                    if (backtracking>0) {failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("62:1: statement : ( ';' | expr ';' | 'print' expr ';' | 'println' expr ';' | ID '=' expr ';' | ID '[' expr ']' '=' expr ';' | 'return' ';' | 'return' expr ';' | WHILE '(' expr ')' block | IF '(' expr ')' block ELSE block | IF '(' expr ')' block );", 7, 14, input);

                    throw nvae;
                }
                }
                break;
            default:
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("62:1: statement : ( ';' | expr ';' | 'print' expr ';' | 'println' expr ';' | ID '=' expr ';' | ID '[' expr ']' '=' expr ';' | 'return' ';' | 'return' expr ';' | WHILE '(' expr ')' block | IF '(' expr ')' block ELSE block | IF '(' expr ')' block );", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // ulNoActions.g:62:13: ';'
                    {
                    root_0 = (Object)adaptor.nil();

                    char_literal27=(Token)input.LT(1);
                    match(input,24,FOLLOW_24_in_statement282); if (failed) return retval;
                    if ( backtracking==0 ) {
                    char_literal27_tree = (Object)adaptor.create(char_literal27);
                    adaptor.addChild(root_0, char_literal27_tree);
                    }

                    }
                    break;
                case 2 :
                    // ulNoActions.g:63:13: expr ';'
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_expr_in_statement296);
                    expr28=expr();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, expr28.getTree());
                    char_literal29=(Token)input.LT(1);
                    match(input,24,FOLLOW_24_in_statement298); if (failed) return retval;
                    if ( backtracking==0 ) {
                    char_literal29_tree = (Object)adaptor.create(char_literal29);
                    adaptor.addChild(root_0, char_literal29_tree);
                    }

                    }
                    break;
                case 3 :
                    // ulNoActions.g:64:13: 'print' expr ';'
                    {
                    root_0 = (Object)adaptor.nil();

                    string_literal30=(Token)input.LT(1);
                    match(input,25,FOLLOW_25_in_statement312); if (failed) return retval;
                    if ( backtracking==0 ) {
                    string_literal30_tree = (Object)adaptor.create(string_literal30);
                    adaptor.addChild(root_0, string_literal30_tree);
                    }
                    pushFollow(FOLLOW_expr_in_statement314);
                    expr31=expr();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, expr31.getTree());
                    char_literal32=(Token)input.LT(1);
                    match(input,24,FOLLOW_24_in_statement316); if (failed) return retval;
                    if ( backtracking==0 ) {
                    char_literal32_tree = (Object)adaptor.create(char_literal32);
                    adaptor.addChild(root_0, char_literal32_tree);
                    }

                    }
                    break;
                case 4 :
                    // ulNoActions.g:65:13: 'println' expr ';'
                    {
                    root_0 = (Object)adaptor.nil();
